--- a/appinfo.json
+++ b/appinfo.json
@@ -1,6 +1,7 @@
 {
     "id": "com.alanstice.test",
-    "version": "0.0.4",
+    "title": "Test",
+    "version": "0.0.5",
     "vendor": "Alan Stice",
     "type": "web",
     "main": "index.html",
