--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,8 @@
 {
     "id": "com.alanstice.test",
     "title": "Test",
-    "version": "0.0.5",
+    "version": "0.0.6",
+    "prerelease": true,
     "vendor": "Alan Stice",
     "type": "web",
     "main": "index.html",
